─────────────────┨ 0.7.0 ┠─────────────────
1) New rule: File creation time. The syntax is the same as in the Date rule.

2) Removed an annoying "boilerplate" code.

─────────────────┨ 0.6.2 ┠─────────────────
1) Significant improvement (~1000 times faster) of the collision test.
This test checks for identical result filenames. While moving
identical names will cause data loss. Test run with ~21k filenames
decreased its runtime from ~18 seconds to ~20k microseconds!

─────────────────┨ 0.6.1 ┠─────────────────
1) Fixed bug in RuleDir for a top level files.

─────────────────┨ 0.6.0 ┠─────────────────
1) New CLI parameter e/example for printing out default config
with autofilled source/destination fields according to the current
directory.

─────────────────┨ 0.5.3 ┠─────────────────
1) Few 'const' and unique_ptr here and there.

2) A tiny aesthetical tuning of printing out the filename pairs.

─────────────────┨ 0.5.2 ┠─────────────────
1) New parameter for disabling file processing confirmation.
May be useful for scripts.

2) Nice progress bar

─────────────────┨ 0.5.1 ┠─────────────────
1) Added different modes of file sorting (Unicode-friendly)

2) Small refactoring plus checking if the source dir exists.

─────────────────┨ 0.5.0 ┠─────────────────
1) Most rules are covered with tests now.

2) ICU library is used now for uppercase/lowercase text transforms

─────────────────┨ 0.4.0 ┠─────────────────
1) Some template magic in the configuration parser. It should make adding
new rules easier and less error-prone.

2) New "rule": replace. Search and replace all occurrences of the
substring to the new string in the CURRENT UNFINISHED FILENAME. It is
a new type of rules.

3) Now files are alphabetically sorted before processing.

4) Tests. Nothing for users, but I expect a slightly less amount of errors
in the code.

5) Documentation now is more... better.

─────────────────┨ 0.3.0 ┠─────────────────