@@ -4,13 +4,6 @@
 #include <filesystem>
 #include <string>
 
-class RuleBase;
-
-
-enum class RuleType {Date, Text, Integer, Extension,
-					 Dir, Filename, Filesize, Replace,
-					 FileCreationDate};
-
 struct RuleParams
 {
 	std::filesystem::path& absolute_path;
@@ -21,18 +14,11 @@ struct RuleParams
 class RuleBase
 {
 public:
-	explicit		RuleBase(RuleType type);
-	RuleType		getType() const;
-	std::string		getTypeStr() const;
 	std::string		getString() const;
 	virtual void	process(const RuleParams&) = 0;
 
 protected:
 	std::string result;
-
-private:
-	RuleType	type;
-
 };
 
 #endif // RULE_H
