@@ -1,7 +1,6 @@
 #include "ruleText.h"
 
 RuleText::RuleText(const std::string& text)
-	: RuleBase(RuleType::Text)
 {
 	result = text;
 }
