@@ -1,7 +1,6 @@
 #ifndef RULES_H
 #define RULES_H
 
-#include "ruleDate.h"
 #include "ruleText.h"
 #include "ruleInteger.h"
 #include "ruleExtension.h"
@@ -10,5 +9,7 @@
 #include "ruleFilesize.h"
 #include "ruleFileCreationDate.h"
 #include "ruleReplace.h"
+#include "ruleExec.h"
+#include "ruleDate.h"
 
 #endif // RULES_H
